New filter options for cal extension

--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,9 @@
 Änderungen
 ----------
 
+v0.8.5 (08.12.2012)
+ * New filter options for cal extension
+
 v0.8.4 (10.03.2012)
  * #64 League table is empty on start of saison
 
