--- a/ChangeLog
+++ b/ChangeLog
@@ -3,12 +3,12 @@
 Änderungen
 ----------
 
-v0.8.6 (??.01.2012)
+v0.9.0 (12.01.2012)
  * Bugfix for cal extension
  * Support for match sets in matchtable
- * Support for volleyball in leaguetable
+ * #8 Support for volleyball in leaguetable
  * #8 League table for icehockey: count wins and looses after penalty and extratime
- 
+
 v0.8.5 (08.12.2012)
  * New filter options for cal extension
 
