--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,9 @@
 Änderungen
 ----------
 
+v0.9.1 (??.01.2013)
+ * Compat-Version for TYPO3 6.0
+
 v0.9.0 (12.01.2012)
  * Bugfix for cal extension
  * Support for match sets in matchtable
