--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,9 @@
 Änderungen
 ----------
 
+v0.9.2 (??.10.2013)
+ * #74: New 3 point system for volleyball
+
 v0.9.1 (01.06.2013)
  * Compat-Version for TYPO3 6.0
  * Dependency to rn_memento removed
