--- a/ChangeLog
+++ b/ChangeLog
@@ -3,7 +3,8 @@
 Änderungen
 ----------
 
-v0.9.2 (??.10.2013)
+v0.9.2 (??.05.2014)
+ * Support for TYPO3 6.2
  * #74: New 3 point system for volleyball
 
 v0.9.1 (01.06.2013)
