--- a/ChangeLog
+++ b/ChangeLog
@@ -3,9 +3,10 @@
 Änderungen
 ----------
 
-v0.9.2 (??.05.2014)
+v1.0.0 (26.04.2014)
  * Support for TYPO3 6.2
  * #74: New 3 point system for volleyball
+ * Changes to apply code conventions
 
 v0.9.1 (01.06.2013)
  * Compat-Version for TYPO3 6.0
