--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,8 @@
 v1.0.1 (??.02.2015)
  * Prev and next links in profile view if linked from teamview.
  * ScopeSelection: Marker for current item changed to ###SAISON_CURRENT_NAME###
+ * TableChart based on JS-Libraries possible. Pre-Build examples for Flot and jqPlot.
+ * TableChart: TS-Path for club selection changed from chartClubs to tablechart.chartClubs
 
 v1.0.0 (26.04.2014)
  * Support for TYPO3 6.2
