--- a/Resources/Private/Language/locallang_db.xml
+++ b/Resources/Private/Language/locallang_db.xml
@@ -277,7 +277,7 @@
 
 			<label index="tablestrategy_default">Standard</label>
 			<label index="tablestrategy_head2head">Vergleich gegeneinander</label>
-			<label index="tablestrategy_pointpermatch">Punkte pro Spiel</label>
+			<label index="tablestrategy_pointpermatch">Punktquotient (Punkte pro Spiel)</label>
 			<label index="tablestrategy_volleyball_2point">Volleyball 2 Punktsystem</label>
 			<label index="tablestrategy_volleyball_3point">Volleyball 3 Punktsystem</label>
 
