digedag/cfc_league#99 Add judo as sports

--- a/Resources/Private/Language/de.locallang.xlf
+++ b/Resources/Private/Language/de.locallang.xlf
@@ -11,6 +11,10 @@
                 <source>Matches</source>
                 <target>Spiele</target>
             </trans-unit>
+            <trans-unit id="label_encounters" xml:space="preserve">
+                <source>Encounters</source>
+                <target>Begegnungen</target>
+            </trans-unit>
             <trans-unit id="label_match" xml:space="preserve">
                 <source>Match</source>
                 <target>Spiel</target>
@@ -35,6 +39,15 @@
                 <source>Balls</source>
                 <target>Bälle</target>
             </trans-unit>
+            <trans-unit id="label_fights" xml:space="preserve">
+                <source>Fights</source>
+                <target>Kämpfe</target>
+            </trans-unit>
+            <trans-unit id="label_scores" xml:space="preserve">
+                <source>Scores</source>
+                <target>Wertungen</target>
+            </trans-unit>
+
             <trans-unit id="label_tabletype_normal" xml:space="preserve">
                 <source>Standard Table</source>
                 <target>Normal</target>
