--- a/Resources/Private/Language/de.locallang_db.xlf
+++ b/Resources/Private/Language/de.locallang_db.xlf
@@ -551,6 +551,10 @@
 				<source>Volleyball 3 point system</source>
 				<target>Volleyball 3 Punktsystem</target>
 			</trans-unit>
+			<trans-unit id="tablestrategy_judo_2point" xml:space="preserve">
+				<source>Judo 2 point system</source>
+				<target>Judo 2 Punktsystem</target>
+			</trans-unit>
 		</body>
 	</file>
 </xliff>
